--- a/public/global.css
+++ b/public/global.css
@@ -9,7 +9,8 @@ body {
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
-	padding: 0
+	padding: 0;
+	font-family: "Roboto Condensed", serif;
 }
 
 a {
@@ -63,4 +64,26 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+.pac-logo::after {
+	background-image: none !important;
+  height: 0px !important;
+}
+.pac-item {
+	text-transform: uppercase;
+    font-family: "Roboto Condensed", serif;
+    align-items: center;
+    cursor: default;
+    border: 0;
+    font-size: 16px;
+    padding: 5px;
+}
+span.pac-item-query {
+    font-size: 16px;
+}
+span {
+color: black;
+}
+span.pac-matched {
+    font-weight: inherit;
 }
